--- a/.gitignore
+++ b/.gitignore
@@ -38,20 +38,17 @@ packages/react-devtools-shell/dist
 packages/react-devtools-scheduling-profiler/dist# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/backend/node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
+/frontend/node_modules
 /build
-
-/client/node_modules
+/coverage
 
 # misc
 .DS_Store
+.idea
 .env.local
 .env.development.local
 .env.test.local
