--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "EQT Full stack code challenge",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test",
+    "test": "jest test",
+    "test:watch": "jest --watch test",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
@@ -12,12 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "pg": "^8.5.1"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "mocha": "^8.2.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   }
 }
