--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /backend
 COPY package*.json ./
 COPY src/ ./src
 COPY secrets/ ./secrets
+COPY .env   ./.env
 COPY wait-for-it.sh ./wait-for-it.sh
 
 RUN npm install
