--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,24 @@
     "test": "jest test",
     "test:watch": "jest --watch test",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "migrate": "node-pg-migrate",
+    "migrate:up": "node-pg-migrate up",
+    "migrate:down": "node-pg-migrate down",
+    "seed": "node src/seed.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
+    "dotenv-expand": "^5.1.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1"
   },
   "devDependencies": {
     "jest": "^26.6.3",
+    "node-pg-migrate": "^6.2.1",
     "nodemon": "^2.0.6"
   }
 }
