[Add] backend structure

--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,4 @@ host=localhost
 database=fullstack_codetest_dev
 user=u1
 password=p1
-DATABASE_URL=postgres://$user:$password@$host:5432/fullstack_codetest_dev
+DATABASE_URL=postgres://u1:p1@localhost:5432/fullstack_codetest_dev
