--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "jest test",
     "test:watch": "jest --watch test",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon src/index.js --trace-warnings",
     "migrate": "node-pg-migrate",
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
@@ -19,8 +19,11 @@
     "dotenv": "^16.0.0",
     "dotenv-expand": "^5.1.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
-    "pg": "^8.5.1"
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.16.2"
   },
   "devDependencies": {
     "jest": "^26.6.3",
